--- a/index.ipynb
+++ b/index.ipynb
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -116,13 +116,14 @@
        " 'South Korea']"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', 'Argentina', 'Italy', 'Canada', 'South Korea']"
+    "['Croatia', 'USA', 'Argentina', 'Mex\n",
+    " ico', 'USA', 'Morocco', 'New Mexico', 'Finland', 'Argentina', 'Italy', 'Canada', 'South Korea']"
    ]
   },
   {
@@ -134,10 +135,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities = ['Solta', 'Greenville', 'Buenos Aires', 'Los Cabos', 'Walla Walla Valley', 'Marakesh', 'Albuquerque', 'Archipelago Sea', 'Iguazu Falls', 'Salina Island', 'Toronto', 'Pyeongchang']"
@@ -145,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +164,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,10 +175,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "countries_of_top_cities = ['Croatia', 'USA', 'Argentina', 'Mexico', 'USA', 'Morocco', 'New Mexico', 'Finland', 'Argentina', 'Italy', 'Canada', 'South Korea']"
@@ -212,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +229,7 @@
        " 'Pyeongchang']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,22 +240,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Solta'"
+       "'Iguazu Falls'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "top_travel_cities[0]"
+    "top_travel_cities[-4\n",
+    "                  \n",
+    "                  \n",
+    " ]"
    ]
   },
   {
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -362,19 +362,19 @@
        "'Toronto'"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "top_canadian_city = top_travel_cities[-2]\n",
-    "top_canadian_city"
+    "top_canadian_city\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -383,13 +383,14 @@
        "str"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(top_canadian_city)"
+    "type(top_canadian_city\n",
+    "    )"
    ]
   },
   {
@@ -397,6 +398,101 @@
    "metadata": {},
    "source": [
     "Now we have a variable of `top_canadian_city`, equal to the string 'Toronto', and a variable of `top_travel_cities` equal to the list of cities.  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Solta',\n",
+       " 'Greenville',\n",
+       " 'Buenos Aires',\n",
+       " 'Los Cabos',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Marakesh',\n",
+       " 'Albuquerque',\n",
+       " 'Archipelago Sea',\n",
+       " 'Iguazu Falls',\n",
+       " 'Salina Island',\n",
+       " 'Toronto',\n",
+       " 'Pyeongchang']"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_travel_cities"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(top_travel_cities)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Accessing Multiple Elements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now imagine that we don't want to access just one element of a list, but multiple elements at once.  Python allows us to do that as well:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Solta', 'Greenville', 'Buenos Aires']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_travel_cities[0:3\n",
+    "                 ]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see from the above example, we can access elements of a list by placing two numbers separated by a colon inside of our brackets. The first number indicates the index of the first element we want returned.  \n",
+    "\n",
+    "The second number could represent the number of elements we want returned back, or maybe it represents the stopping index of the elements that we are retrieving.  Looking at our `top_travel_cities` it could be either."
    ]
   },
   {
@@ -422,100 +518,6 @@
       ]
      },
      "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "top_travel_cities"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(top_travel_cities)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Accessing Multiple Elements"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now imagine that we don't want to access just one element of a list, but multiple elements at once.  Python allows us to do that as well:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Solta', 'Greenville']"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "top_travel_cities[0:2]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As we can see from the above example, we can access elements of a list by placing two numbers separated by a colon inside of our brackets. The first number indicates the index of the first element we want returned.  \n",
-    "\n",
-    "The second number could represent the number of elements we want returned back, or maybe it represents the stopping index of the elements that we are retrieving.  Looking at our `top_travel_cities` it could be either."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Solta',\n",
-       " 'Greenville',\n",
-       " 'Buenos Aires',\n",
-       " 'Los Cabos',\n",
-       " 'Walla Walla Valley',\n",
-       " 'Marakesh',\n",
-       " 'Albuquerque',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Salina Island',\n",
-       " 'Toronto',\n",
-       " 'Pyeongchang']"
-      ]
-     },
-     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -667,10 +669,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 10,
+   "metadata": {},
    "outputs": [],
    "source": [
     "top_travel_cities.append('San Antonio')"
@@ -685,46 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Solta',\n",
-       " 'Greenville',\n",
-       " 'Buenos Aires',\n",
-       " 'Los Cabos',\n",
-       " 'Walla Walla Valley',\n",
-       " 'Marakesh',\n",
-       " 'Albuquerque',\n",
-       " 'Archipelago Sea',\n",
-       " 'Iguazu Falls',\n",
-       " 'Salina Island',\n",
-       " 'Toronto',\n",
-       " 'Pyeongchang',\n",
-       " 'San Antonio']"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "top_travel_cities"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You will see that 'San Antonio' has been added to the list.  Note that unlike slice, `append` is destructive.  That is, it changes our underlying data structure.  Every time we execute the `append` method, another element is added to our list.   Now what if we accidentally add 'San Antonio' a second time to our list."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -746,14 +707,56 @@
        " 'San Antonio']"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_travel_cities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You will see that 'San Antonio' has been added to the list.  Note that unlike slice, `append` is destructive.  That is, it changes our underlying data structure.  Every time we execute the `append` method, another element is added to our list.   Now what if we accidentally add 'San Antonio' a second time to our list."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Solta',\n",
+       " 'Greenville',\n",
+       " 'Buenos Aires',\n",
+       " 'Los Cabos',\n",
+       " 'Walla Walla Valley',\n",
+       " 'Marakesh',\n",
+       " 'Albuquerque',\n",
+       " 'Archipelago Sea',\n",
+       " 'Iguazu Falls',\n",
+       " 'Salina Island',\n",
+       " 'Toronto',\n",
+       " 'Pyeongchang',\n",
+       " 'San Antonio',\n",
+       " 'San Antonio',\n",
+       " 'San Antonio',\n",
+       " 'San Antonio']"
+      ]
+     },
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "top_travel_cities.append('San Antonio')\n",
-    "top_travel_cities"
+    "top_travel_cities\n"
    ]
   },
   {
@@ -765,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +777,7 @@
        "'San Antonio'"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -798,7 +801,7 @@
     {
      "data": {
       "text/plain": [
-       "'Walla Walla Valley'"
+       "4"
       ]
      },
      "execution_count": 17,
@@ -807,23 +810,34 @@
     }
    ],
    "source": [
-    "top_travel_cities[4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "top_travel_cities[4] = 4"
+    "top_travel_cities[4]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "top_travel_cities[4] \n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -844,7 +858,7 @@
        " 'San Antonio']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -868,7 +882,8 @@
    },
    "outputs": [],
    "source": [
-    "top_travel_cities[4] = 'Walla Walla Valley'"
+    "top_travel_cities[4] = 'Logrono'\n",
+    "\n"
    ]
   },
   {
@@ -890,7 +905,7 @@
        " 'Greenville',\n",
        " 'Buenos Aires',\n",
        " 'Los Cabos',\n",
-       " 'Walla Walla Valley',\n",
+       " 4,\n",
        " 'Marakesh',\n",
        " 'Albuquerque',\n",
        " 'Archipelago Sea',\n",
@@ -907,7 +922,7 @@
     }
    ],
    "source": [
-    "top_travel_cities"
+    "top_travel_cities\n"
    ]
   },
   {
@@ -932,7 +947,8 @@
    },
    "outputs": [],
    "source": [
-    "top_travel_cities.append('Solta')"
+    "top_travel_cities.append('Solta')\n",
+    "\n"
    ]
   },
   {
@@ -951,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -972,13 +988,14 @@
        " 'Walla Walla Valley'}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "unique_travel_cities = set(top_travel_cities)\n",
+    "\n",
     "unique_travel_cities"
    ]
   },
@@ -991,7 +1008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -1000,13 +1017,13 @@
        "set"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(set())"
+    "type(set())\n"
    ]
   },
   {
@@ -1018,23 +1035,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'set' object does not support indexing",
+     "ename": "AttributeError",
+     "evalue": "'set' object has no attribute 'to_list'",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m-------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-3d2453cad46e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0munique_travel_cities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'set' object does not support indexing"
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-37-c7bcf27ed6a6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0munique_travel_cities\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_list\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'set' object has no attribute 'to_list'"
      ]
     }
    ],
    "source": [
-    "unique_travel_cities[1]"
+    "x = unique_travel_cities.to_list()\n",
+    "x\n",
+    "\n"
    ]
   },
   {
@@ -1247,21 +1266,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
